# tweet-suspect-detection

./: .dockerignore  .dvcignore  .gitignore  Dockerfile  Détection_de_Tweet_Suspect_2026.md  LINKS.md  README.md  dvc.yaml  main.py  pyproject.toml  skill.md
.github/workflows/: ci.yml  deploy-hf.yml
data/raw/: tweets.csv.dvc
models/: .gitignore  bert_metrics.json  metrics.json
notebooks/: 01_eda.ipynb  02_modeling.ipynb
reports/: .~lock.rapport.docx#  rapport.docx  rapport.md
scripts/: deploy_hf_space.sh  push_to_hub.py
src/: download.py  preprocessing.py
src/deploy/: streamlit_app.py
src/models/: evaluate.py  track_mlflow.py  train.py  train_bert.py  train_with_mlflow.py
