[project]
name = "tweet-suspect-detection"
version = "0.1.0"
description = "Détection de Tweets Suspects - Projet M2 FD&IA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.67.1",
    "gdown>=6.1.0",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
]
