[project]
name = "tweet-suspect-detection"
version = "0.1.0"
description = "Détection de Tweets Suspects - Projet M2 FD&IA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc>=3.67.1",
    "gdown>=6.1.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
    "weasyprint>=69.0",
    "wordcloud>=1.9.6",
]
