[project]
name = "tweet-suspect-detection"
version = "0.1.0"
description = "Détection de Tweets Suspects - Projet M2 FD&IA"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "dvc>=3.67.1",
    "gdown>=6.1.0",
    "huggingface-hub>=0.27.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "mlflow>=1.27.0",
    "nbconvert>=7.17.1",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "plotly>=6.8.0",
    "protobuf<5",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "streamlit>=1.58.0",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "transformers>=5.13.0",
    "weasyprint>=69.0",
    "wordcloud>=1.9.6",
]
